--- a/HNSHOP/Views/Products/Favorites.cshtml
+++ b/HNSHOP/Views/Products/Favorites.cshtml
@@ -2,12 +2,13 @@
 @model List<HNSHOP.Dtos.Response.ProductResDto>
 
 <div class="container">
-    <h2 class="title text-center">Danh Sách Sản Phẩm Yêu Thích</h2>
+    <h2 class="title text-center">DANH SÁCH SẢN PHẨM YÊU THÍCH</h2>
     <br />
     <br />
+
     @if (Model != null && Model.Any())
     {
-        <div class="row">
+        <div class="row" id="favorite-list">
             @foreach (var product in Model)
             {
                 <div class="col-sm-4">
@@ -18,10 +19,8 @@
                                      alt="@product.Name" style="height: 300px; width:260px" />
                                 <h2>@product.Price.ToString("C0", CultureInfo.GetCultureInfo("vi-VN"))</h2>
                                 <p>@product.Name</p>
-
                                 @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
                                 {
-                                    <!-- Chỉ tài khoản khách hàng mới có nút thêm vào giỏ -->
                                     <button class="btn btn-default add-to-cart" data-product-id="@product.Id"
                                             data-quantity="1">
                                         <i class="fa fa-shopping-cart"></i> Thêm vào giỏ hàng
@@ -29,20 +28,17 @@
                                 }
                             </div>
                         </div>
-
                         <div class="choose">
                             <ul class="nav nav-pills nav-justified">
                                 @if (User.Identity.IsAuthenticated && User.IsInRole("User"))
                                 {
-                                    <!-- Chỉ user mới có thêm yêu thích -->
                                     <li>
-                                        <a href="javascript:void(0);" class="like-btn" data-product-id="@product.Id">
-                                            <i class="fa fa-heart"></i>
-                                            <span class="like-text">@(product.IsLiked ? "Bỏ yêu thích" : "Thêm yêu thích")</span>
+                                        <a href="javascript:void(0);" class="like-btn remove-favorite" data-product-id="@product.Id">
+                                            <i class="fa fa-heart text-danger"></i>
+                                            <span class="like-text">Bỏ yêu thích</span>
                                         </a>
                                     </li>
                                 }
-
                                 <li>
                                     <a asp-controller="Products" asp-action="Details" asp-route-id="@product.Id">
                                         <i class="fa fa-plus-square"></i> Chi tiết sản phẩm
@@ -57,20 +53,17 @@
     }
     else
     {
-        <p class="text-center">Bạn chưa yêu thích sản phẩm nào.</p>
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
+        <p class="text-center" id="no-favorite-message" style="margin:40px 0 80px 0;font-size:1.2rem;">
+            Bạn chưa yêu thích sản phẩm nào.
+        </p>
     }
 </div>
 
 @section Scripts {
     <script>
         $(document).ready(function () {
-            $(".remove-favorite").click(function (e) {
+            // Luôn dùng delegation để sự kiện không bị mất khi load lại qua AJAX
+            $(document).on("click", ".remove-favorite", function (e) {
                 e.preventDefault();
 
                 let button = $(this);
@@ -82,7 +75,19 @@
                     data: { productId: productId },
                     success: function (res) {
                         if (res.success) {
-                            button.closest(".col-sm-4").remove(); 
+                            // Xóa sản phẩm khỏi view
+                            button.closest(".col-sm-4").fadeOut(300, function () {
+                                $(this).remove();
+                                // Nếu hết sản phẩm thì hiện 1 dòng message, không lặp
+                                if ($("#favorite-list .col-sm-4").length === 0) {
+                                    $("#favorite-list").remove();
+                                    if ($("#no-favorite-message").length === 0) {
+                                        $(".container").append(
+                                            '<p class="text-center" id="no-favorite-message" style="margin:40px 0 80px 0;font-size:1.2rem;">Bạn chưa yêu thích sản phẩm nào.</p>'
+                                        );
+                                    }
+                                }
+                            });
                         }
                     },
                     error: function () {
